style/style.css
/* ... */
@font-face {
  font-family: "BiCute Round";
  font-style: normal;
  font-weight: 400;
  src: local("※"), 
  url(../font/TmoneyRoundWindRegular.woff2) format("woff2"), 
  url(../font/TmoneyRoundWindRegular.woff) format("woff"), 
  url(../font/TmoneyRoundWindRegular.ttf) format("fft"); 
  font-display: swap
}

@font-face {
  font-family: "BiCute Round";
  font-style: normal;
  font-weight: 700;
  src: local("※"), 
  url(../font/TmoneyRoundWind-ExtraBoldA1.woff2) format("woff2"), 
  url(../font/TmoneyRoundWind-ExtraBoldA1.woff) format("woff"), 
  url(../font/TmoneyRoundWind-ExtraBoldA1.ttf) format("fft"); 
  font-display: swap
}

#container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: -1;
}

